--- a/public/custom.css
+++ b/public/custom.css
@@ -189,8 +189,17 @@
 }
 
 .home-municipales_6-tiles .home-municipales__tile_2,
-.home-municipales_6-tiles .home-municipales__tile_3,
-.home-municipales_6-tiles .home-municipales__tile_4,
+.home-municipales_6-tiles .home-municipales__tile_3 {
+  width: 40%;
+  height: 18rem;
+}
+
+.home-municipales_6-tiles .home-municipales__tile_4 {
+  width: 40%;
+  height: 18rem;
+  clear: both;
+}
+
 .home-municipales_6-tiles .home-municipales__tile_5 {
   width: 40%;
   height: 18rem;
@@ -222,7 +231,12 @@
   height: 18rem;
 }
 
-.home-municipales_7-tiles .home-municipales__tile_4,
+.home-municipales_7-tiles .home-municipales__tile_4 {
+  width: 20%;
+  height: 18rem;
+  clear: both;
+}
+
 .home-municipales_7-tiles .home-municipales__tile_5 {
   width: 20%;
   height: 18rem;
@@ -258,8 +272,17 @@
 }
 
 .home-municipales_8-tiles .home-municipales__tile_3,
-.home-municipales_8-tiles .home-municipales__tile_4,
-.home-municipales_8-tiles .home-municipales__tile_5,
+.home-municipales_8-tiles .home-municipales__tile_4 {
+  width: 20%;
+  height: 18rem;
+}
+
+.home-municipales_8-tiles .home-municipales__tile_5 {
+  width: 20%;
+  height: 18rem;
+  clear: both;
+}
+
 .home-municipales_8-tiles .home-municipales__tile_6 {
   width: 20%;
   height: 18rem;
@@ -289,8 +312,17 @@
 }
 
 .home-municipales_9-tiles .home-municipales__tile_2,
-.home-municipales_9-tiles .home-municipales__tile_3,
-.home-municipales_9-tiles .home-municipales__tile_4,
+.home-municipales_9-tiles .home-municipales__tile_3 {
+  width: 40%;
+  height: 18rem;
+}
+
+.home-municipales_9-tiles .home-municipales__tile_4 {
+  width: 40%;
+  height: 18rem;
+  clear: both;
+}
+
 .home-municipales_9-tiles .home-municipales__tile_5 {
   width: 40%;
   height: 18rem;
@@ -329,8 +361,17 @@
 }
 
 .home-municipales_10-tiles .home-municipales__tile_2,
-.home-municipales_10-tiles .home-municipales__tile_3,
-.home-municipales_10-tiles .home-municipales__tile_4,
+.home-municipales_10-tiles .home-municipales__tile_3  {
+  width: 40%;
+  height: 18rem;
+}
+
+.home-municipales_10-tiles .home-municipales__tile_4 {
+  width: 40%;
+  height: 18rem;
+  clear: both;
+}
+
 .home-municipales_10-tiles .home-municipales__tile_5 {
   width: 40%;
   height: 18rem;
@@ -365,8 +406,17 @@
 }
 
 .home-municipales_11-tiles .home-municipales__tile_2,
-.home-municipales_11-tiles .home-municipales__tile_3,
-.home-municipales_11-tiles .home-municipales__tile_4,
+.home-municipales_11-tiles .home-municipales__tile_3 {
+  width: 40%;
+  height: 18rem;
+}
+
+.home-municipales_11-tiles .home-municipales__tile_4 {
+  width: 40%;
+  height: 18rem;
+  clear: both;
+}
+
 .home-municipales_11-tiles .home-municipales__tile_5 {
   width: 40%;
   height: 18rem;
@@ -398,8 +448,17 @@
   height: 18rem;
 }
 
-.home-municipales_12-tiles .home-municipales__tile_4,
-.home-municipales_12-tiles .home-municipales__tile_5,
+.home-municipales_12-tiles .home-municipales__tile_4 {
+  width: 40%;
+  height: 18rem;
+}
+
+.home-municipales_12-tiles .home-municipales__tile_5 {
+  width: 40%;
+  height: 18rem;
+  clear: both;
+}
+
 .home-municipales_12-tiles .home-municipales__tile_6 {
   width: 40%;
   height: 18rem;
